--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "debug": "^4.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts-ts": "2.17.0"
+    "react-scripts-ts": "2.17.0",
+    "react-test-renderer": "^16.5.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
